--- a/app/views/profiles/_form.html.erb
+++ b/app/views/profiles/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@profile, url: new_user_session_path) do |f| %>
+<%= form_for(@profile, url: {action: "create"}) do |f| %>
   <% if @profile.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@profile.errors.count, "error") %> prohibited this profile from being saved:</h2>
