--- a/app/views/profiles/_form.html.erb
+++ b/app/views/profiles/_form.html.erb
@@ -42,11 +42,13 @@
       <%= f.label :state %><br />
       <%= f.text_field :state %><br/>
       <%= f.label :post_code %><br />
-      <%= f.text_field :post_code %><br/>
-      
+      <%= f.text_field :post_code %><br/>     
   </div>
 
-
+<div class="field">
+    <%= f.label :image_url %><br>
+    <%= f.text_field :image_url %>
+</div>
 <table style="width:100%">
   <tr>
     <td>Month</td>
