--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
  -->	<div id="columns">
 		<div id="side">
 			<ul>
-				<li><a href="http://localhost:3000/profiles/1/edit">profile</a></li>
+				<li><a href= <%= edit_profile_path(current_user.id)%>>profile</a></li>
 				<li><a href="http://www..../faq">suggested matches</a></li>
 				 <li><a href="http://www..../news">find a gym</a></li> 
 			</ul> 
