--- a/app/views/profiles/_form.html.erb
+++ b/app/views/profiles/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@profile, url: {action: @action}) do |f| %>
+<%= form_for @profile, url: {action: @action}, html: { multipart: true } do |f| %>
   <% if @profile.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@profile.errors.count, "error") %> prohibited this profile from being saved:</h2>
@@ -46,8 +46,8 @@
   </div>
 
 <div class="field">
-    <%= f.label :image_url %><br>
-    <%= f.text_field :image_url %>
+    <%= f.label :upload_image %><br>
+    <%= f.file_field :photo%>
 </div>
 <table style="width:100%">
   <tr>
