--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,4 +1,4 @@
-/*
+/*/*
  * This is a manifest file that'll be compiled into application.css, which will include all the files
  * listed below.
  *
@@ -13,3 +13,674 @@
  *= require_tree .
  *= require_self
  */
+
+.target {border:1px solid #fff;border: 1px solid #fff;
+display: inline-block;
+
+float: left;
+padding: 5px 10px;}
+
+
+
+/*hr {max-width:106px;border-top: 1px solid #3893d0;}
+button{border: 1px solid #3893d0;
+color: #3893d0;
+border-radius: 50%;
+background-color: transparent;
+height: 25px;
+width: 25px;
+margin-top: 9px;
+margin-left: 15px;}
+*/
+
+
+.navbar-toggle{width:50px;height:50px;}
+
+
+
+ /*<link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+
+    <link href='http://fonts.googleapis.com/css?family=Orbitron' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Raleway:400,500,300' rel='stylesheet' type='text/css'> */
+
+@font-face { font-family: Orbitron; src: url('http://fonts.googleapis.com/css?family=Orbitron'); } 
+@font-face { font-family: Raleway; src: url('http://fonts.googleapis.com/css?family=Raleway:400,500,300'); } 
+@font-face { font-family: Orbitron; src: url('http://fonts.googleapis.com/css?family=Orbitron'); } 
+
+
+body {
+    width: 100%;
+    height: 100%;
+    font-family: Raleway,"Helvetica Neue",Helvetica,Arial,sans-serif;
+    background-image:url(back.jpg);
+     background-color: #030304;
+}
+
+/*h2
+{
+    margin: 0 0 35px;
+    text-transform: uppercase;
+    font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-weight: 700;
+    letter-spacing: 1px;
+}*/
+#edit-section {
+    width: 100%;
+    padding: 100px 0;
+    color: #fff;
+    margin-left: 150px;
+
+}
+
+h1,
+h2
+{
+    font-family: Orbitron, sans-serif;
+font-size: 45px;
+letter-spacing: 0.1em;
+ text-transform: uppercase;
+
+text-align: center;
+margin-top: 100px;
+margin-bottom: 15px;
+color: #fff;
+padding-bottom: 10px;
+}
+
+.field
+{
+    color: grey;
+font-family:  Raleway,"Helvetica Neue",Helvetica,Arial,sans-serif;
+font-size:18px;
+/*letter-spacing: em;
+*//*text-align: left;
+margin-top: 20px;
+margin-left: 550px;*/
+    
+}
+#edit-section>.field
+{
+ color: grey;
+font-family:  Raleway,"Helvetica Neue",Helvetica,Arial,sans-serif;
+font-size:20px;
+letter-spacing: 0.1em;
+text-align: center;
+margin-top: 20px;
+margin-left: 150px;
+    
+}
+
+
+.people
+{
+margin-top: 100px;
+
+}
+
+.login,
+.signup
+{
+    
+text-align: center;
+margin-top: 20px;
+
+
+}
+
+.render
+{
+    color: #fff;
+    font-size:15px;
+    text-align: center;
+
+}
+
+/*
+body {
+    width: 100%;
+    height: 100%;
+    font-family: Lora,"Helvetica Neue",Helvetica,Arial,sans-serif;
+    color: #fff;
+    background-image:url(back.jpg);
+    background-color: #030304;
+}*/
+
+html {
+    width: 100%;
+    height: 100%;
+}
+
+
+
+/*h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    margin: 0 0 35px;
+    text-transform: uppercase;
+    font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-weight: 700;
+    letter-spacing: 1px;
+}
+
+p {
+    margin: 0 0 25px;
+    font-size: 18px;
+    line-height: 1.5;
+}*/
+
+.navbar-nav{margin-top: 15px;font-family: 'Orbitron', sans-serif; font-size:14px;letter-spacing:0.1em;}
+
+h5
+{
+    margin: 0 0 35px;
+    text-transform: uppercase;
+    font-family:'Raleway',sans-serif;
+    font-weight: 700;
+    letter-spacing: 1px;
+    color: white;
+}
+
+
+
+p{
+    font-family: 'Raleway', sans-serif;font-size:16px;margin-top:26px;margin: 0 0 25px;
+    font-size: 18px;
+    line-height: 1.5;
+   color: white;
+   }
+
+
+
+/*mg.map:hover {opacity:0.8;}
+
+#about h2{font-family: 'Orbitron', sans-serif; font-size:16px;letter-spacing:0.1em;color:#3893d0;text-align: left;
+margin-top: 10px;margin-bottom: 15px;}
+
+#contact {background-color:rgba(0,0,0,.7); }
+#contact h2{font-family: 'Orbitron', sans-serif; font-size:12px;letter-spacing:0.1em;color:#fff;text-align: left;
+margin-top: 100px;margin-bottom: 35px;}
+
+.S-task, .L-task {margin-top:20px;}
+
+
+.S-task p{text-align:right;}
+.L-task p{text-align:left;}
+.L-border {border-right:1px solid #3893d0;padding-right:20px;}
+.L-border img {margin-left:20px;display:block;float:right;}
+.R-border img {margin-right:20px;display:block;float:left;}
+.R-border {border-left:1px solid #3893d0;padding-left:20px;}
+
+#about p{text-align:left;}
+.text-danger {
+color: #e63822;
+text-transform: uppercase;
+font-size: 12px;
+letter-spacing: 0.1em;
+}
+
+@media(min-width:767px) {
+    p {
+        margin: 0 0 35px;
+       font-size: 16px;
+	line-height: 1.4;
+    }
+	
+	.char{width:419px;height:502px;}
+}
+*/
+a {
+    color: #428bca;
+   /* -webkit-transition: all .2s ease-in-out;
+    -moz-transition: all .2s ease-in-out;
+    transition: all .2s ease-in-out;*/
+}
+
+a:hover,
+a:focus {
+    text-decoration: none;
+    background-color: #428bca;
+	color:#020202;
+}
+
+/*.light {
+    font-weight: 400;
+}*/
+
+.navbar {
+    margin-bottom: 0;
+   
+    text-transform: uppercase;
+    font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
+    background-color: #000;
+}
+
+.navbar-brand {
+    font-weight: 400;
+}
+
+.navbar-brand:focus {
+    outline: 0;
+}
+
+.navbar-brand:hover {
+    background-color:transparent;
+	opacity:0.8;
+}
+
+.navbar-custom a {
+    color: #fff;
+}
+
+.navbar-custom .nav li a {
+    -webkit-transition: background .3s ease-in-out;
+    -moz-transition: background .3s ease-in-out;
+    transition: background .3s ease-in-out;
+}
+
+.navbar-custom .nav li a:hover,
+.navbar-custom .nav li a:focus,
+.navbar-custom .nav li.active {
+    outline: 0;
+    background-color: rgba(255,255,255,.2);
+}
+
+.navbar-toggle {
+    padding: 10px 6px;
+    font-size: 30px;
+    color: #fff;
+}
+
+.navbar-toggle:focus,
+.navbar-toggle:active {
+    outline: 0;
+}
+
+
+
+
+@media(min-width:1200px) {
+.map-title{position:absolute;top:330px;font-family: 'Orbitron', sans-serif;
+font-size: 26px;
+letter-spacing: 0.1em;
+color: #fff;
+text-align: center; left:30%;
+}
+}
+@media(max-width:1199px) {
+.map-title{font-family: 'Orbitron', sans-serif;
+font-size: 26px;
+letter-spacing: 0.1em;
+color: #fff;
+text-align: center;position:absolute;top:300px;left:29%;}
+
+}
+
+@media(max-width:767px) {
+.map-title{font-family: 'Orbitron', sans-serif;
+font-size: 16px;
+letter-spacing: 0.1em;
+color: #fff;
+text-align: center;position:absolute;top:10%;left:5%;}
+}
+/*
+.download-section p{display:none;}
+
+.char{height:auto; background-image:none;border-bottom: 1px solid #3893d0;padding-bottom: 15px;}
+.skill{display:block;}
+
+.char img{margin:0 auto;margin-bottom: 20px;}
+
+#contact h2 {margin-top: 10px;}
+.S-task p {
+text-align: left; margin-top: 0px;
+}*/
+
+.overlay p{font-size:20px;}
+
+.btn-huge {
+    padding: 25px;
+    font-size: 16px;
+	border:1px solid;
+	letter-spacing:0.1em;
+	font-family: 'Orbitron', sans-serif;
+}
+
+ @media(min-width:767px){ .navbar {
+        padding: 20px 0;
+        border-bottom: 0;
+        letter-spacing: 1px;
+        background: 0 0;
+        -webkit-transition: background .5s ease-in-out,padding .5s ease-in-out;
+        -moz-transition: background .5s ease-in-out,padding .5s ease-in-out;
+        transition: background .5s ease-in-out,padding .5s ease-in-out;
+    }
+    
+    .top-nav-collapse {
+        padding: 0;
+        background-color: #000;
+    }
+
+    .navbar-custom.top-nav-collapse {
+        border-bottom: 1px solid rgba(56,147,208,.3);
+    }
+    }
+
+
+/*@media (min-width:768px) and(max-width:992px) {
+.map-title{font-family: 'Orbitron', sans-serif;
+font-size: 26px;
+letter-spacing: 0.1em;
+color: #fff;
+text-align: center;position:absolute;top:253px;left:23%;}
+
+}
+
+@media(min-width:767px) and  (max-width:991px){
+  
+	
+	.map-title{font-family: 'Orbitron', sans-serif;
+font-size: 16px;
+letter-spacing: 0.1em;
+color: #fff;
+text-align: center;position:absolute;top:39%;left:34%;}
+
+}
+
+.scene {
+  max-width: 220px;
+  margin: 0 auto;
+  padding: 0;
+  margin-top:150px;
+  
+   margin-bottom:70px;
+}
+
+.layer:nth-child(1) {
+  opacity: 0.35;
+}
+.layer:nth-child(2) {
+  opacity: 0.95;
+}
+
+
+
+.intro-body {
+    display: table-cell;
+    vertical-align: middle;
+}
+
+.brand-heading {
+    font-size: 40px;
+}
+
+.intro-text {
+    font-size: 18px;
+}
+
+@media(min-width:767px) {
+	.char img{margin-top: 70px;margin-left: -45px;}
+    .intro {
+        height: 100%;
+        padding: 0;
+    }
+	
+	.btn-huge {
+    padding: 25px;
+    font-size: 26px;
+	border:1px solid;
+	letter-spacing:0.1em;
+	font-family: 'Orbitron', sans-serif;
+}
+
+    .brand-heading {
+        font-size: 100px;
+    }
+
+    .intro-text {
+        font-size: 16px;
+		margin-top: 20px;
+    }
+}
+
+.btn-circle {
+    width: 70px;
+    height: 70px;
+    margin-top: 15px;
+    padding: 7px 16px;
+    border: 1px solid #3893d0;
+    border-radius: 35px;
+    font-size: 40px;
+    color: #3893d0;
+    background: 0 0;
+    -webkit-transition: background .3s ease-in-out;
+    -moz-transition: background .3s ease-in-out;
+    transition: background .3s ease-in-out;
+}
+
+
+
+
+
+.btn-circle:hover,
+.btn-circle:focus {
+    outline: 0;
+    color: #fff;
+   
+}
+
+.page-scroll .btn-circle i.animated {
+    -webkit-transition-property: -webkit-transform;
+    -webkit-transition-duration: 1s;
+    -moz-transition-property: -moz-transform;
+    -moz-transition-duration: 1s;
+}
+
+.page-scroll .btn-circle:hover i.animated {
+    -webkit-animation-name: pulse;
+    -moz-animation-name: pulse;
+    -webkit-animation-duration: 1.5s;
+    -moz-animation-duration: 1.5s;
+    -webkit-animation-iteration-count: infinite;
+    -moz-animation-iteration-count: infinite;
+    -webkit-animation-timing-function: linear;
+    -moz-animation-timing-function: linear;
+}
+
+
+
+
+
+.content-section {
+    padding-top: 100px;
+}
+
+.download-section {
+    width: 100%;
+    padding: 10px 0;
+    color: #fff;
+}
+
+.char{
+	
+	margin: 0 auto;
+	position:relative;
+	margin-bottom:50px;
+	}
+	
+.char .avatar{position:absolute;right:0;position: absolute;
+right: 1px;
+top: -54px;
+-webkit-border-radius: 50px;
+border-radius: 50px;}
+	
+
+.char a:hover{background-color:transparent;}
+/*
+.float {
+  display: inline-block;
+  -webkit-transition-duration: 0.4s;
+  transition-duration: 0.4s;
+  -webkit-transition-property: -webkit-transform;
+  transition-property: transform;
+  -webkit-transform: translateZ(0);
+  -ms-transform: translateZ(0);
+  transform: translateZ(0);
+  
+}*/
+
+.char ul{ list-style:none;margin:0 auto;
+}
+
+.char li{display:inline-block;margin-right:10px;font-family: 'Orbitron', sans-serif; font-size:10px;letter-spacing:0.1em; text-transform:uppercase; background-color:rgba(0,0,0,.7);padding:5px 10px;border:1px solid #3893d0;margin-bottom: 9px;}
+
+.download-section h2{ font-family: 'Orbitron', sans-serif;
+font-size: 16px;
+letter-spacing: 0.1em;
+margin-bottom: 10px;}
+@-webkit-keyframes pulse {    
+    0 {
+        -webkit-transform: scale(1);
+        transform: scale(1);
+    }
+
+    50% {
+        -webkit-transform: scale(1.2);
+        transform: scale(1.2);
+    }
+
+    100% {
+        -webkit-transform: scale(1);
+        transform: scale(1);
+    }
+}
+
+@-moz-keyframes pulse {    
+    0 {
+        -moz-transform: scale(1);
+        transform: scale(1);
+    }
+
+    50% {
+        -moz-transform: scale(1.2);
+        transform: scale(1.2);
+    }
+
+    100% {
+        -moz-transform: scale(1);
+        transform: scale(1);
+    }
+}
+
+/*.float:hover {
+  -webkit-transform: translateY(-65px);
+  -ms-transform: translateY(-65px);
+  transform: translateY(-65px);
+  opacity:0.7;
+}*/
+.skill{
+margin: 0 auto;
+}
+
+
+@keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Firefox */
+@-moz-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Safari and Chrome */
+@-webkit-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Internet Explorer */
+@-ms-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Opera */
+@-o-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+
+
+
+.btn {
+    text-transform: uppercase;
+    font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-weight: 400;
+    -webkit-transition: all .3s ease-in-out;
+    -moz-transition: all .3s ease-in-out;
+    transition: all .3s ease-in-out;
+	
+}
+
+.btn-default {
+    border: 1px solid #3893d0;
+    color: #3893d0;
+    background-color: transparent;
+}
+
+.btn-lg {
+padding: 10px 10px;
+font-size: 18px;
+line-height: 1.33;
+border-radius: 50px;}
+
+.btn-default:hover,
+.btn-default:focus {
+    border: 1px solid #3893d0;
+    outline: 0;
+    color: #000;
+    background-color: #3893d0;
+}
+
+
+
+.banner-social-buttons {
+    margin-top: 0;
+	float: left;
+}
+
+/*@media(max-width:1199px) {
+    ul.banner-social-buttons {
+        margin-top: 15px;
+    }
+}
+
+@media(max-width:767px) {
+    ul.banner-social-buttons>li {
+        display: block;
+        margin-bottom: 20px;
+        padding: 0;
+    }
+
+    ul.banner-social-buttons>li:last-child {
+        margin-bottom: 0;
+    }
+	.char .avatar {display:none;}
+	#cloud3 {display:none;}
+}
+
+
+
+body {
+    webkit-tap-highlight-color: rgba(255,255,255,.2);
+}
+*/
+
+
+a.navbar-brand:hover{color:#fff;}
+
