--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -1,6 +1,32 @@
-<h1>Editing Profile</h1>
+<html lang="en">
+
+<head>
+    <meta charset="utf-8">
+    
+   
+    <title>edit</title>
+
+    
+
+    <!-- Fonts -->
+    <link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+
+    <link href='http://fonts.googleapis.com/css?family=Orbitron' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Raleway:400,500,300' rel='stylesheet' type='text/css'> 
+
+    
+<body id="page-top" data-spy="scroll" data-target=".navbar-custom">
+
+
+<h2>Editing Profile</h2>
+
 
 <%= render 'form' %>
+<br>
+<div class="render">
 
 <%= link_to 'Show', @profile %> |
 <%= link_to 'Back', discovery_path %>
+</div>
+
+</body>
