--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -1,38 +1,45 @@
-<!-- Navigation -->
-<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-  <div class="container">
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-        <span class="sr-only">SpotMe</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <%= link_to "SpotMe", root_path, class: "navbar-brand" %>
-    </div>
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav pull-right">
-        <% if user_signed_in? %>
-            <li>
-              <%= link_to "My Profile", profile_path(current_user.profiles.first.id) %>
-            </li>
-            <li><%= link_to "chats", "http://josephndungu.com/tutorials/gmail-like-chat-application-in-ruby-on-rails" %></li>
-            <li>
-              <%= link_to "Logout", destroy_user_session_path, method: :delete	  %>
-            </li>
-        <% else %>
-            <li>
-              <%= link_to "Signin", new_user_session_path %>
-            </li>
-            <li>
-              <%= link_to "Signup", new_user_registration_path %>
-            </li>
-        <% end %>
-      </ul>
-    </div>
-    <!-- /.navbar-collapse -->
-  </div>
-  <!-- /.container -->
-</nav>
+
+ <nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
+        <div class="container">
+            <div class="navbar-header page-scroll">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
+                    <i class="fa fa-bars"></i>
+                </button>
+                <a class="navbar-brand" href="index">
+                  <%= image_tag("logomin.png",class:"img-responsive") %>
+                </a>
+               
+            </div>
+          
+            
+
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse navbar-right navbar-main-collapse">
+                <ul class="nav navbar-nav">
+                  
+                   
+                    
+                    
+                    <li class="page-scroll">
+                    <a href=<%=edit_profile_path(current_user)%>>PROFILE</a> 
+                    </li>
+                    <li>
+                        <a href=<%=new_user_registration_path%>>MATCHES</a>
+                    </li>
+                    <li>
+                         <a href="/profiles">NEARBY GYMS</a>
+                    </li>
+                    <li>
+                         <a href="http://josephndungu.com/tutorials/gmail-like-chat-application-in-ruby-on-rails">CHAT</a>
+                    </li>
+                    <li>
+                        <%= link_to "Logout", destroy_user_session_path, method: :delete    %>
+                    </li>
+                   
+                    
+                </ul>
+            </div> 
+            <!-- /.navbar-collapse -->
+        </div>
+        <!-- /.container -->
+    </nav><!-- 
