--- a/app/views/profiles/index.html.erb
+++ b/app/views/profiles/index.html.erb
@@ -1,7 +1,26 @@
+<html lang="en">
+
+<head>
+    <meta charset="utf-8">
+    
+   
+    <title>edit</title>
+
+    
+
+    <!-- Fonts -->
+    <link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+
+    <link href='http://fonts.googleapis.com/css?family=Orbitron' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Raleway:400,500,300' rel='stylesheet' type='text/css'> 
+
+    
+<body id="page-top" data-spy="scroll" data-target=".navbar-custom">
 <p id="notice"><%= notice %></p>
 
-<h1>Listing Profiles</h1>
+<h2>Listing Profiles</h2>
 
+<div class="table-show">
 <table>
   <thead>
     <tr>
@@ -19,7 +38,9 @@
     <% end %>
   </tbody>
 </table>
-
+</div>
 <br>
-
+<div class="render">
 <%= link_to 'New Profile', new_profile_path %>
+</dic>
+</body>
