--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -37,15 +37,17 @@ div {
 }
 
 .field_with_errors {
+  text-align: center;
   padding: 2px;
   background-color: red;
   display: table;
 }
 
 #error_explanation {
+  text-align: center;
   width: 450px;
   border: 2px solid red;
-  padding: 7px;
+  padding: 2px;
   padding-bottom: 0;
   margin-bottom: 20px;
   background-color: #f0f0f0;
@@ -54,7 +56,7 @@ div {
     text-align: center;
     font-weight: bold;
     padding: 5px 5px 5px 15px;
-    font-size: 12px;
+    font-size: 10px;
     margin: -7px;
     margin-bottom: 0px;
     background-color: #c00;
