Discoveries page works

--- a/app/views/discoveries/show.html.erb
+++ b/app/views/discoveries/show.html.erb
@@ -35,7 +35,7 @@
                         
                         <div class="people">
 
-                        <% @people.each do |profile| %>
+                        <% @people.each do |uid, profile| %>
                          <div class="col-lg-4 col-md-4">
                             <div class="text-center">
                             <h5><%=profile.name%></h5>
