--- a/app/views/profiles/_form.html.erb
+++ b/app/views/profiles/_form.html.erb
@@ -17,7 +17,7 @@
       <%= f.text_field :name %><br/>
       <%= f.label :nick_name %><br />
       <%= f.text_field :nick_name %>
-      
+
       <%= label_tag :name, 'Name:' %>
   </div>
 
@@ -42,17 +42,17 @@
       <%= f.label :state %><br />
       <%= f.text_field :state %><br/>
       <%= f.label :post_code %><br />
-      <%= f.text_field :post_code %><br/>     
+      <%= f.text_field :post_code %><br/>
   </div>
 
 <div class="field">
-    <%= f.label :upload_image %><br>
+    <%= f.label :upload_image %>
     <%= f.file_field :photo%>
 </div>
 <table style="width:100%">
   <tr>
     <td>Month</td>
-    <td>Day</td> 
+    <td>Day</td>
     <td>Year</td>
   </tr>
   <tr>
@@ -72,7 +72,7 @@
         <option value="mercedes">Mercedes</option>
         <option value="audi">Audi</option>
       </select>
-    </td> 
+    </td>
 
     <td>
       <select name="year">
