--- a/app/views/profiles/_form.html.erb
+++ b/app/views/profiles/_form.html.erb
@@ -29,7 +29,6 @@
       <div class="field">
       <%= f.label :nickname %><br />
       <%= f.text_field :nick_name %>
-
       <%= label_tag :name, 'Name:' %>
   </div>
 
@@ -65,6 +64,7 @@
       <%= f.text_field :post_code %><br/>
       <%= f.label :postcode %><br />
       <%= f.text_field :post_code %><br/>
+      </div>
   </div>
 
 <div class="field">
