Made more changes to make location work

--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -14,9 +14,9 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav pull-right">
-        <% if user_signed_in? && current_user.profiles.first %>
+        <% if user_signed_in? && current_user.profile %>
             <li>
-              <%= link_to "My Profile", profile_path(current_user.profiles.first.id) %>
+              <%= link_to "My Profile", profile_path(current_user.profile.id) %>
             </li>
             <li id="notification">
               <%= link_to "chats", '/chats' %>
