--- a/app/assets/stylesheets/chat.css
+++ b/app/assets/stylesheets/chat.css
@@ -103,7 +103,7 @@
 }
 
 .chatboxmessagecontent {
-    background: white;
+    background: grey;
     padding: 10px;
     border-radius: 2px;
     box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
