--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -5,7 +5,7 @@
   <div class="chatboxmessagecontent">
     <p><%= message.body %></p>
     <time datetime="<%= message.created_at %>" title="<%= message.created_at.strftime("%d %b  %Y at %I:%M%p") %>">
-      <%= message_interlocutor(message).profiles.first.name %> • <%= message.created_at.strftime("%H:%M %p") %>
+      <%= message_interlocutor(message).profile.name %> • <%= message.created_at.strftime("%H:%M %p") %>
     </time>
   </div>
 </li>
