--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -18,6 +18,9 @@
             <li>
               <%= link_to "My Profile", profile_path(current_user.profile.id) %>
             </li>
+            <li>
+              <%= link_to "Nearby", '/discovery' %>
+            </li>
             <li id="notification">
               <%= link_to "chats", '/chats' %>
             <li>
