--- a/app/views/profiles/_form.html.erb
+++ b/app/views/profiles/_form.html.erb
@@ -63,6 +63,10 @@
       <%= f.label :post_code %><br />
       <%= f.text_field :post_code %><br/>
       </div>
+      <div class="field">
+      <%= f.label :birthyear %><br />
+      <%= f.text_field :birthyear %><br/>
+      </div>
   </div>
 
 <div class="field">
@@ -70,44 +74,8 @@
     <%= f.file_field :photo%>
 </div>
 
- <div class="field">
-<table style="width:50%">
-  <tr>
-    <td>Month</td>
-    <td>Day</td>
-    <td>Year</td>
-  </tr>
-  <tr>
-    <td>
-
-      <select name="month">
-        <option value="volvo">Volvo</option>
-        <option value="saab">Saab</option>
-        <option value="mercedes">Mercedes</option>
-        <option value="audi">Audi</option>
-      </select>
-    </td>
-
-    <td>
-      <select name="day">
-        <option value="volvo">Volvo</option>
-        <option value="saab">Saab</option>
-        <option value="mercedes">Mercedes</option>
-        <option value="audi">Audi</option>
-      </select>
-    </td>
-
-    <td>
-      <select name="year">
-        <option value="volvo">Volvo</option>
-        <option value="saab">Saab</option>
-        <option value="mercedes">Mercedes</option>
-        <option value="audi">Audi</option>
-      </select>
-    </td>
-  </tr>
-</table>
- </div>
+  
+ 
 </div>
 </div>
 </div>
