--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -1,36 +1,4 @@
-body {
-  background-color: #fff;
-  color: #333;
-  font-family: verdana, arial, helvetica, sans-serif;
-  font-size: 13px;
-  line-height: 18px;
-}
 
-
-pre {
-  background-color: #eee;
-  padding: 10px;
-  font-size: 11px;
-}
-
-a {
-  color: #000;
-
-  &:visited {
-    color: #666;
-  }
-
-  &:hover {
-    color: #fff;
-    background-color: #000;
-  }
-}
-
-div {
-  &.field, &.actions {
-    margin-bottom: 10px;
-  }
-}
 
 #notice {
   color: green;
@@ -41,14 +9,18 @@ div {
   padding: 2px;
   background-color: red;
   display: table;
+   margin-left:auto;
+  margin-right:auto;
 }
 
 #error_explanation {
   text-align: center;
-  width: 450px;
+  width: 600px;
   border: 2px solid red;
   padding: 2px;
   padding-bottom: 0;
+  margin-left:auto;
+  margin-right:auto;
   margin-bottom: 20px;
   background-color: #f0f0f0;
 
