--- a/app/assets/stylesheets/gyms.scss
+++ b/app/assets/stylesheets/gyms.scss
@@ -1,19 +1,6 @@
-// Place all the styles related to the Profiles controller here.
+// Place all the styles related to the Gyms controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
-.next-button {
-  width: 100px;
-  height: 32px;
-  border-radius: 16px 16px;
-  border-color: #fff;
-  border-style: solid;
-  position: absolute;
-  top:80px;
-  bottom: 0;
-  left: 500px;
-  right: 0;
-
-}
 #map {
   height: 650px;
   border-radius: 16px 16px;
