--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -19,6 +19,9 @@
               <%= link_to "My Profile", profile_path(current_user.profile.id) %>
             </li>
             <li>
+              <%= link_to "Gym&people", 'gyms/nearby_gym' %>
+            </li>
+            <li>
               <%= link_to "Nearby", '/discovery' %>
             </li>
             <li id="notification">
