--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -27,7 +27,7 @@ padding: 5px 10px;}
 {
      padding-top: 25px;
    /* padding-right: 500px;*/
-    
+
     padding-left: 550px;
 }
 
@@ -36,14 +36,10 @@ padding: 5px 10px;}
 
 
 
- /*<link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 
-    <link href='http://fonts.googleapis.com/css?family=Orbitron' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Raleway:400,500,300' rel='stylesheet' type='text/css'> */
+@font-face { font-family: Orbitron; src: url('http://fonts.googleapis.com/css?family=Orbitron'); }
+@font-face { font-family: Raleway; src: url('http://fonts.googleapis.com/css?family=Raleway:400,500,300'); }
 
-@font-face { font-family: Orbitron; src: url('http://fonts.googleapis.com/css?family=Orbitron'); } 
-@font-face { font-family: Raleway; src: url('http://fonts.googleapis.com/css?family=Raleway:400,500,300'); } 
-@font-face { font-family: Orbitron; src: url('http://fonts.googleapis.com/css?family=Orbitron'); } 
 
 
 body {
@@ -83,11 +79,8 @@ padding-bottom: 10px;
     color: grey;
 font-family:  Raleway,"Helvetica Neue",Helvetica,Arial,sans-serif;
 font-size:18px;
-/*letter-spacing: em;
-*//*text-align: left;
-margin-top: 20px;
-margin-left: 550px;*/
-    
+
+
 }
 #edit-section>.field
 {
@@ -98,7 +91,7 @@ letter-spacing: 0.1em;
 text-align: center;
 margin-top: 20px;
 margin-left: 150px;
-    
+
 }
 
 
@@ -111,7 +104,7 @@ margin-top: 100px;
 .login,
 .signup
 {
-    
+
 text-align: center;
 margin-top: 20px;
 
@@ -126,15 +119,6 @@ margin-top: 20px;
 
 }
 
-/*
-body {
-    width: 100%;
-    height: 100%;
-    font-family: Lora,"Helvetica Neue",Helvetica,Arial,sans-serif;
-    color: #fff;
-    background-image:url(back.jpg);
-    background-color: #030304;
-}*/
 
 html {
     width: 100%;
@@ -142,25 +126,6 @@ html {
 }
 
 
-
-/*h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-    margin: 0 0 35px;
-    text-transform: uppercase;
-    font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
-    font-weight: 700;
-    letter-spacing: 1px;
-}
-
-p {
-    margin: 0 0 25px;
-    font-size: 18px;
-    line-height: 1.5;
-}*/
 
 .navbar-nav{margin-top: 15px;font-family: 'Orbitron', sans-serif; font-size:14px;letter-spacing:0.1em;}
 
@@ -188,9 +153,7 @@ p{
 
 a {
     color: #428bca;
-   /* -webkit-transition: all .2s ease-in-out;
-    -moz-transition: all .2s ease-in-out;
-    transition: all .2s ease-in-out;*/
+
 }
 
 a:hover,
@@ -200,13 +163,11 @@ a:focus {
 	color:#020202;
 }
 
-/*.light {
-    font-weight: 400;
-}*/
+
 
 .navbar {
     margin-bottom: 0;
-   
+
     text-transform: uppercase;
     font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
     background-color: #000;
@@ -280,18 +241,7 @@ letter-spacing: 0.1em;
 color: #fff;
 text-align: center;position:absolute;top:10%;left:5%;}
 }
-/*
-.download-section p{display:none;}
 
-.char{height:auto; background-image:none;border-bottom: 1px solid #3893d0;padding-bottom: 15px;}
-.skill{display:block;}
-
-.char img{margin:0 auto;margin-bottom: 20px;}
-
-#contact h2 {margin-top: 10px;}
-.S-task p {
-text-align: left; margin-top: 0px;
-}*/
 
 .overlay p{font-size:20px;}
 
@@ -312,7 +262,7 @@ text-align: left; margin-top: 0px;
         -moz-transition: background .5s ease-in-out,padding .5s ease-in-out;
         transition: background .5s ease-in-out,padding .5s ease-in-out;
     }
-    
+
     .top-nav-collapse {
         padding: 0;
         background-color: #000;
@@ -332,8 +282,8 @@ text-align: left; margin-top: 0px;
 .char li{display:inline-block;margin-right:10px;font-family: 'Orbitron', sans-serif; font-size:10px;letter-spacing:0.1em; text-transform:uppercase; background-color:rgba(0,0,0,.7);padding:5px 10px;border:1px solid #3893d0;margin-bottom: 9px;}
 
 
-@-webkit-keyframes pulse {    
-    0 {
+@-webkit-keyframes pulse {
+    0% {
         -webkit-transform: scale(1);
         transform: scale(1);
     }
@@ -349,8 +299,8 @@ text-align: left; margin-top: 0px;
     }
 }
 
-@-moz-keyframes pulse {    
-    0 {
+@-moz-keyframes pulse {
+    0% {
         -moz-transform: scale(1);
         transform: scale(1);
     }
@@ -408,7 +358,7 @@ text-align: left; margin-top: 0px;
     -webkit-transition: all .3s ease-in-out;
     -moz-transition: all .3s ease-in-out;
     transition: all .3s ease-in-out;
-	
+
 }
 
 .btn-default {
@@ -436,4 +386,3 @@ border-radius: 50px;}
 
 
 a.navbar-brand:hover{color:#fff;}
-
