--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,4 +1,24 @@
+<html lang="en">
+
+<head>
+    <meta charset="utf-8">
+    
+   
+    <title>LOGIN</title>
+
+    
+
+    <!-- Fonts -->
+    <link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+
+    <link href='http://fonts.googleapis.com/css?family=Orbitron' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Raleway:400,500,300' rel='stylesheet' type='text/css'> 
+
+    
+<body>
+  
 <h2>Forgot your password?</h2>
+<div class="reset">
 
 <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
   <%= devise_error_messages! %>
@@ -12,5 +32,9 @@
     <%= f.submit "Send me reset password instructions" %>
   </div>
 <% end %>
-
+<div class="render">
 <%= render "devise/shared/links" %>
+</div>
+
+</div>
+</body>
