--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -3,24 +3,24 @@
 
 <head>
     <meta charset="utf-8">
-    
-   
+
+
     <title>edit</title>
 
-    
+
 
     <!-- Fonts -->
     <link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 
     <link href='http://fonts.googleapis.com/css?family=Orbitron' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Raleway:400,500,300' rel='stylesheet' type='text/css'> 
+    <link href='http://fonts.googleapis.com/css?family=Raleway:400,500,300' rel='stylesheet' type='text/css'>
 
-    
+
 <body id="page-top" data-spy="scroll" data-target=".navbar-custom">
 <p id="notice"><%= notice %></p>
 
       <h2><%= @profile.name %></h2>
-  	
+
     <div class="container">
 <div class="row">
   <div class="col-lg-4 col-md-4"></div>
@@ -29,13 +29,13 @@
 </div>
 
 		<br><br><br>
-	
-        	<div class="text-center"><%= link_to "Send Message", "#", class: "btn btn-success btn-xs start-conversation",
+	        <% if current_user.profile.id != @profile.id%>
+        	   <div class="text-center"><%= link_to "Send Message", "#", class: "btn btn-success btn-xs start-conversation",
                     "data-sid" => current_user.id, "data-rip" => @profile.user_id %></div>
+          <% end %>
 <br>
 <div class="render">
 <%= link_to 'Back', discovery_path %>
 
 </div>
 </body>
-
