--- a/app/views/profiles/_form.html.erb
+++ b/app/views/profiles/_form.html.erb
@@ -93,7 +93,7 @@
         <option value="oct">October</option>
         <option value="nov">November</option>
         <option value="dec">December</option>
-        
+
       </select>
     </td>
 
@@ -146,7 +146,7 @@
 </div>
 </div>
 <div class="text-center">
-  <% if @action == 'Create' %>
+  <% if @action == 'create' %>
     <%= f.submit "create", class: "btn btn-default" %>
   <% else %>
     <%= f.submit "update", class: "btn btn-default" %>
