--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,3 +1,4 @@
+<% cache current_user do %>
 <!DOCTYPE html>
 <html>
 <head>
@@ -12,20 +13,9 @@
 	<% if user_signed_in? && current_user.profile %>
 		<%= render 'layouts/nav' %>
 	<% end %>
-<!-- 	<% if user_signed_in? %>
-	<div id="columns">
-		<div id="side">
-			<ul>
-				<li><a href= <%= edit_profile_path(current_user.id)%>>profile</a></li>
-				<li><a href="http://www..../faq">suggested matches</a></li>
-				 <li><a href="http://www..../news">find a gym</a></li>
-
-			</ul>
-		</div>
-	 </div>
-	<% end %> -->
 		<div id="main">
 			<%= yield %>
   		</div>
 </body>
 </html>
+<% end %>
