--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -1,4 +1,5 @@
 <!-- Navigation -->
+<% cache('side_bar')do %>
 <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
   <div class="container">
     <!-- Brand and toggle get grouped for better mobile display -->
@@ -45,3 +46,4 @@
   </div>
   <!-- /.container -->
 </nav>
+<% end %>
