--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -16,7 +16,7 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav pull-right">
-          <% cache("#{current_user.id}_nav_bar", :expires_in => 1.hour) do %>
+          <% cache("#{current_user.id}_nav_bar", :expires_in => 30.minutes) do %>
           <li>
             <%= link_to "My Profile", edit_profile_path(current_user.profile.id) %>
           </li>
