--- a/app/views/discoveries/gym_people.html.erb
+++ b/app/views/discoveries/gym_people.html.erb
@@ -25,39 +25,28 @@
 
 
         <!-- Page Content -->
+        <div class="edit-section">
+        <div class="container">
+            <br><br><br>
 
+                    <h2>They workout here</h2>
 
-            <div class="edit-section">
-            <div class="container">
-                <br><br><br>
+                    <div class="people">
 
-                        <h2>They workout here</h2>
-
-                        <div class="people">
-
-                        <% @profiles_id.each do |profile_id| %>
-                        <%= profile = Profile.find(profile_id)%>
-                         <div class="col-lg-4 col-md-4">
-                            <div class="text-center">
-                            <h5><%= profile.name%></h5>
-                          <a href= <%= profile_path(profile.id)%> >
-                          <%= image_tag profile.photo.url(:thumb),class:"img-thumbnail img-responsive"%>
-                           </a>
-                         </div>
+                    <% @profiles.each do |profile| %>
+                      <% cache(profile) do%>
+                       <div class="col-lg-4 col-md-4">
+                          <div class="text-center">
+                            <h5><%=profile.name%></h5>
+                            <a href= <%= profile_path(profile.id)%> >
+                              <%= image_tag profile.photo.url(:thumb),class:"img-thumbnail img-responsive"%>
+                            </a>
+                          </div>
                      </div>
-
-                         <% end %>
-                         </div>
-                    </div>
+                    <% end %>
+                   <% end %>
+                     </div>
                 </div>
             </div>
-        </div>
-
-
-    </div>
-
-
-
-</div>
-</body>
-</html>
+        </body>
+      </html>
