Changes to discoveries_controller

--- a/app/views/discoveries/show.html.erb
+++ b/app/views/discoveries/show.html.erb
@@ -35,7 +35,7 @@
 
               <div class="people">
 
-              <% @profiles.each do |uid, profile| %>
+              <% @people.each do |uid, profile| %>
                 <% cache(profile) do%>
                  <div class="col-lg-4 col-md-4">
                     <div class="text-center">
