--- a/app/assets/stylesheets/gyms.scss
+++ b/app/assets/stylesheets/gyms.scss
@@ -2,7 +2,10 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 #map {
-  height: 650px;
+  height: 450px;
+  width: 980px;
+  text-align:center;
+  margin:0 auto;
   border-radius: 16px 16px;
   border-color: #fff;
   border-style: solid;
