--- a/app/assets/stylesheets/profiles.scss
+++ b/app/assets/stylesheets/profiles.scss
@@ -15,7 +15,10 @@
 
 }
 #map {
-  height: 650px;
+  height: 450px;
+  width: 980px;
+  text-align:center;
+  margin:0 auto;
   border-radius: 16px 16px;
   border-color: #fff;
   border-style: solid;
