Revert "test discoverly caching"
This reverts commit 24d1092d3a2906a32bc84f7b9d50d8182f85807b.

--- a/app/views/discoveries/gym_people.html.erb
+++ b/app/views/discoveries/gym_people.html.erb
@@ -21,6 +21,9 @@
 
 <body id="page-top" data-spy="scroll" data-target=".navbar-custom">
 
+<%= render 'layouts/nav' %>
+
+
         <!-- Page Content -->
         <div class="edit-section">
         <div class="container">
