--- a/app/views/discoveries/show.html.erb
+++ b/app/views/discoveries/show.html.erb
@@ -21,6 +21,7 @@
 
 <body id="page-top" data-spy="scroll" data-target=".navbar-custom">
 
+<%= render 'layouts/nav' %>
 
 
         <!-- Page Content -->
