Added next and previous buttons

--- a/app/views/discoveries/show.html.erb
+++ b/app/views/discoveries/show.html.erb
@@ -47,7 +47,13 @@
                </div>
               <% end %>
              <% end %>
-               </div>
+           </div>
+            <li class="previous">
+              <%= link_to "Previous", previous %>
+              </li>
+              <li class="next">
+                <%= link_to "Next", next %>
+                </li>
           </div>
       </div>
   </body>
